; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_imap.c_imap_matchresp.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_imap.c_imap_matchresp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FALSE = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i64, i8*)* @imap_matchresp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @imap_matchresp(i8* %0, i64 %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  store i8* %0, i8** %5, align 8
  store i64 %1, i64* %6, align 8
  store i8* %2, i8** %7, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = load i64, i64* %6, align 8
  %12 = getelementptr inbounds i8, i8* %10, i64 %11
  store i8* %12, i8** %8, align 8
  %13 = load i8*, i8** %7, align 8
  %14 = call i64 @strlen(i8* %13)
  store i64 %14, i64* %9, align 8
  %15 = load i8*, i8** %5, align 8
  %16 = getelementptr inbounds i8, i8* %15, i64 2
  store i8* %16, i8** %5, align 8
  %17 = load i8*, i8** %5, align 8
  %18 = load i8*, i8** %8, align 8
  %19 = icmp ult i8* %17, %18
  br i1 %19, label %20, label %54

20:                                               ; preds = %3
  %21 = load i8*, i8** %5, align 8
  %22 = load i8, i8* %21, align 1
  %23 = call i64 @ISDIGIT(i8 signext %22)
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %54

25:                                               ; preds = %20
  br label %26

26:                                               ; preds = %38, %25
  %27 = load i8*, i8** %5, align 8
  %28 = getelementptr inbounds i8, i8* %27, i32 1
  store i8* %28, i8** %5, align 8
  br label %29

29:                                               ; preds = %26
  %30 = load i8*, i8** %5, align 8
  %31 = load i8*, i8** %8, align 8
  %32 = icmp ult i8* %30, %31
  br i1 %32, label %33, label %38

33:                                               ; preds = %29
  %34 = load i8*, i8** %5, align 8
  %35 = load i8, i8* %34, align 1
  %36 = call i64 @ISDIGIT(i8 signext %35)
  %37 = icmp ne i64 %36, 0
  br label %38

38:                                               ; preds = %33, %29
  %39 = phi i1 [ false, %29 ], [ %37, %33 ]
  br i1 %39, label %26, label %40

40:                                               ; preds = %38
  %41 = load i8*, i8** %5, align 8
  %42 = load i8*, i8** %8, align 8
  %43 = icmp eq i8* %41, %42
  br i1 %43, label %49, label %44

44:                                               ; preds = %40
  %45 = load i8*, i8** %5, align 8
  %46 = load i8, i8* %45, align 1
  %47 = sext i8 %46 to i32
  %48 = icmp ne i32 %47, 32
  br i1 %48, label %49, label %51

49:                                               ; preds = %44, %40
  %50 = load i32, i32* @FALSE, align 4
  store i32 %50, i32* %4, align 4
  br label %84

51:                                               ; preds = %44
  %52 = load i8*, i8** %5, align 8
  %53 = getelementptr inbounds i8, i8* %52, i32 1
  store i8* %53, i8** %5, align 8
  br label %54

54:                                               ; preds = %51, %20, %3
  %55 = load i8*, i8** %5, align 8
  %56 = load i64, i64* %9, align 8
  %57 = getelementptr inbounds i8, i8* %55, i64 %56
  %58 = load i8*, i8** %8, align 8
  %59 = icmp ule i8* %57, %58
  br i1 %59, label %60, label %82

60:                                               ; preds = %54
  %61 = load i8*, i8** %5, align 8
  %62 = load i8*, i8** %7, align 8
  %63 = load i64, i64* %9, align 8
  %64 = call i64 @strncasecompare(i8* %61, i8* %62, i64 %63)
  %65 = icmp ne i64 %64, 0
  br i1 %65, label %66, label %82

66:                                               ; preds = %60
  %67 = load i8*, i8** %5, align 8
  %68 = load i64, i64* %9, align 8
  %69 = getelementptr inbounds i8, i8* %67, i64 %68
  %70 = load i8, i8* %69, align 1
  %71 = sext i8 %70 to i32
  %72 = icmp eq i32 %71, 32
  br i1 %72, label %80, label %73

73:                                               ; preds = %66
  %74 = load i8*, i8** %5, align 8
  %75 = load i64, i64* %9, align 8
  %76 = getelementptr inbounds i8, i8* %74, i64 %75
  %77 = getelementptr inbounds i8, i8* %76, i64 2
  %78 = load i8*, i8** %8, align 8
  %79 = icmp eq i8* %77, %78
  br i1 %79, label %80, label %82

80:                                               ; preds = %73, %66
  %81 = load i32, i32* @TRUE, align 4
  store i32 %81, i32* %4, align 4
  br label %84

82:                                               ; preds = %73, %60, %54
  %83 = load i32, i32* @FALSE, align 4
  store i32 %83, i32* %4, align 4
  br label %84

84:                                               ; preds = %82, %80, %49
  %85 = load i32, i32* %4, align 4
  ret i32 %85
}

declare dso_local i64 @strlen(i8*) #1

declare dso_local i64 @ISDIGIT(i8 signext) #1

declare dso_local i64 @strncasecompare(i8*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
